@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttShell (NSH)</i></font></big></h1>
-      <p>Last Updated: August 28, 2012</p>
+      <p>Last Updated: October 20, 2012</p>
     </td>
   </tr>
 </table>
