@@ -153,19 +153,20 @@ config ARCH_OPTIMIZED_FUNCTIONS
 
 if ARCH_OPTIMIZED_FUNCTIONS
 config ARCH_MEMCPY
-	bool "memcpy"
+	bool "memcpy()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
 		of memcpy().
 
 config MEMCPY_VIK
-	bool "Vik memcpy"
+	bool "Vik memcpy()"
 	default n
 	depends on !ARCH_MEMCPY
 	---help---
-	Select this option to use the optimized memcpy() function by Daniel Vik.
-	See licensing information in the top-level COPYING file.
+		Select this option to use the optimized memcpy() function by Daniel Vik.
+		Select this option to option for speed at the expense of increased size.
+		See licensing information in the top-level COPYING file.
 
 if MEMCPY_VIK
 config MEMCPY_PRE_INC_PTRS
@@ -182,50 +183,58 @@ config MEMCPY_INDEXED_COPY
 		MEMCPY_PRE_INC_PTRS option.
 
 config MEMCPY_64BIT
-	bool "64-bit memcpy"
+	bool "64-bit memcpy()"
 	default n
 	---help---
-		Compiles memcpy for 64 bit architectures
+		Compiles memcpy() for 64 bit architectures
 
 endif
 
 config ARCH_MEMCMP
-	bool "memcmp"
+	bool "memcmp()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
 		of memcmp().
 
 config ARCH_MEMMOVE
-	bool "memmove"
+	bool "memmove()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
 		of memmove().
 
 config ARCH_MEMSET
-	bool "memset"
+	bool "memset()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
 		of memset().
 
+config MEMSET_OPTSPEED
+	bool "Optimize memset() for speed"
+	default n
+	depends on !ARCH_MEMSET
+	---help---
+		Select this option to use a version of memcpy() optimized for speed.
+		Default: memcpy() is optimized for size.
+
 config ARCH_STRCMP
-	bool "strcmp"
+	bool "strcmp()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
 		of strcmp().
 
 config ARCH_STRCPY
-	bool "strcpy"
+	bool "strcpy()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
 		of strcpy().
 
 config ARCH_STRNCPY
-	bool "strncpy"
+	bool "strncpy()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
@@ -239,14 +248,14 @@ config ARCH_STRLEN
 		of strlen().
 
 config ARCH_STRNLEN
-	bool "strlen"
+	bool "strlen()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
 		of strnlen().
 
 config ARCH_BZERO
-	bool "bzero"
+	bool "bzero()"
 	default n
 	---help---
 		Select this option if the architecture provides an optimized version
